--- a/FormMain.resx
+++ b/FormMain.resx
@@ -123,32 +123,32 @@
   <metadata name="menuNotifyIcon.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>129, 17</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="notifyIcon.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAANQ1AADUNQAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAP8AAAD+AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/lJSU/5SUlP+UlJT/lJSU/5SUlP+UlJT/lJSU/5SUlP+UlJT/lJSU/5SU
-        lP+UlJT/lJSU/5SUlP8AAAD/AAAA/5SUlP+UlJT/lJSU/5SUlP+UlJT/lJSU/5SUlP+UlJT/lJSU/5SU
-        lP+UlJT/lJSU/5SUlP+UlJT/AAAA/wAAAP2UlJT/lJSU/0lJSf9JSUn/SUlJ/5SUlP+UlJT/lJSU/5SU
-        lP9JSUn/SUlJ/0lJSf+UlJT/lJSU/wAAAP8AAAD5lJSU/0lJSf9JSUn/SUlJ/5SUlP9JSUn/lJSU/5SU
-        lP9JSUn/SUlJ/0lJSf+UlJT/SUlJ/5SUlP8AAAD/AAAA9ZSUlP9JSUn/lJSU/0lJSf9JSUn/SUlJ/5SU
-        lP+UlJT/SUlJ/5SUlP9JSUn/SUlJ/0lJSf+UlJT/AAAA/wAAAPSUlJT/SUlJ/7Gxsf+UlJT/SUlJ/0lJ
-        Sf+UlJT/lJSU/0lJSf+xsbH/lJSU/0lJSf9JSUn/lJSU/wAAAP8AAADylJSU/5SUlP9JSUn/SUlJ/0lJ
-        Sf+UlJT/lJSU/5SUlP+UlJT/SUlJ/0lJSf9JSUn/lJSU/5SUlP8AAAD/AAAA8JSUlP+UlJT/lJSU/5SU
-        lP+UlJT/lJSU/5SUlP+UlJT/lJSU/5SUlP+UlJT/lJSU/5SUlP+UlJT/AAAA/wAAAPaUlJT/lJSU/5SU
-        lP+UlJT/lJSU/5SUlP+UlJT/lJSU/5SUlP+UlJT/lJSU/5SUlP+UlJT/lJSU/wAAAP8AAAD9sbGx/7Gx
-        sf+xsbH/sbGx/7Gxsf+xsbH/sbGx/7Gxsf+xsbH/sbGx/7Gxsf+xsbH/sbGx/7Gxsf8AAAD/AAAA/wAA
-        AP0AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAA//8AAP//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAD//wAA//8AAA==
-</value>
-  </data>
   <metadata name="timer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>276, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAANQ1AADUNQAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAA/wAAAP8N6j3/Deo9/w3hMf8N6Tz/Deo9/w3qPf8AAAD/AAAA/wAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAA/w3qPf8I2yX/AMQB/wHDAf8Szhn/HdEl/2/wf/9995H/Ju1R/w3q
+        Pf8AAAD/AAAAAAAAAAAAAAAAAAAA/w3qPf8AxAL/BM8T/wDDAP8Gxgf/G88g/z/dSv+C+JX/gPmW/1Lp
+        ZP9D5lj/Deo9/wAAAP8AAAAAAAAAAAAAAP8F0xr/AsgI/wDDAP8AwwD/AcMB/y7WNf9c6Gr/lP+p/5T/
+        qv+U/6r/WO1u/zjlUP8AAAD/AAAAAAAAAP8N6j3/AcgH/wHFA/8AwwD/AMMA/wDDAP8v1jb/SOBT/2ru
+        ev+U/6r/lP+q/3T0iP803kX/Deo9/wAAAP8AAAD/Deo9/wHHB/8AwwD/AMMA/wDDAP8AwwD/DMgO/zXY
+        Pf9L4Vb/be99/479o/9J4lb/EtAd/wvhMP8AAAD/AAAA/wzoOf8F0xn/AMMA/wDDAP8AwwD/AMMA/wDD
+        AP8MyA7/EcoU/zTYPP8i0Sj/EswY/wbNEf8J3Sj/AAAA/wAAAP8M5jj/BtQb/wDDAP8AwwD/AMMA/wDD
+        AP8AwwD/AMMA/wDDAP8DxAT/AMMA/wDDAP8F0Rb/CuEu/wAAAP8AAAD/Dek8/wPMDv8AwwD/AMMA/wDD
+        AP8AwwD/AMMA/wDDAP8AwwD/AMMA/wDDAP8AwwD/BdIY/wzoOv8AAAD/AAAA/w3qPf8Cxgb/BccI/yvV
+        M/842kH/CMYJ/wPEBP8AwwD/AMMA/wDDAP8AwwD/AMMA/wXSGP8N6Tv/AAAA/wAAAAAAAAD/DOMz/yva
+        OP9t8H//j/2k/0DdSv8Hxgj/AMMA/wDDAP8AwwD/AMMA/wDDAP8H2iP/AAAA/wAAAAAAAAAAAAAA/w3q
+        Pf8n0y3/ePWM/23wf/9X52b/CscL/wDDAP8AwwD/AMMA/wPNEP8F0hj/DOc5/wAAAP8AAAAAAAAAAAAA
+        AAAAAAD/Deo9/x7oRP8z20D/GM4e/wnSGv8FzxT/BtUc/wbWH/8H1x//DOg5/wAAAP8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAP8AAAD/Deo9/w3qPf8M4jL/CNok/wfYIf8M5jf/AAAA/wAAAP8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAAAAAAAAAAAAAAAA
+        AAAAAAAA+B8AAOAHAADAAwAAgAEAAIABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAQAAgAEAAMAD
+        AADgBwAA+B8AAA==
+</value>
+  </data>
 </root>
